--- a/progetto-memory-game-solo-indicazioni/index.html
+++ b/progetto-memory-game-solo-indicazioni/index.html
@@ -7,20 +7,20 @@
 	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="box">
-				<div class="numclicks">
-					<h2>Numero di click: <span id="clicks">0</span></h2>
-				</div>
-				<!-- creo i div delle caselle del gioco per tutte le immagini con richiamo della funzione al click -->
-				
-				<!-- Inserisco location.reload() per ricaricare il documento -->
-				
-
-			</div>
-		</div>
-	</div>
+	<center>
+		<div id="scatola">
+			<span id="scatolabottoni">
+			  <span class="button">
+				<span id="contatore">0</span>
+				Clicks
+			  </span>
+			  <span class="button">
+				<a onclick="resetta();">Reset</a>
+			  </span> 
+			</span>
+			<div id="scatolaimmagini"></div>
+		  </div>
+	</center>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="script.js"></script>
 </body>
